# oxideav-avi

./: CHANGELOG.md  Cargo.toml  README.md
benches/: avi_perf.rs
src/: codec_map.rs  demuxer.rs  lib.rs  muxer.rs  packaging.rs  riff.rs  stream_format.rs
tests/: avi_ffmpeg.rs  mux_roundtrip.rs  opendml_roundtrip.rs  round10.rs  round101_super_index_duration.rs  round104_vprp_aspect.rs  round107_idit.rs  round11.rs  round112_ismp.rs  round115_rcframe.rs  round119_wlanguage.rs  round12.rs  round13.rs  round14.rs  round15.rs  round153_initial_frames.rs  round157_avih_initial_frames.rs  round16.rs  round163_channel_layout.rs  round17.rs  round176_strh_quality.rs  round18.rs  round182_strh_priority.rs  round19.rs  round197_super_index_sub_type.rs  round203_strh_start.rs  round210_strh_handler.rs  round217_strh_suggested_buffer_size.rs  round222_strh_sample_size.rs  round229_strh_length.rs  round234_dmlh_total_frames.rs  round247_strh_flags.rs  round249_strh_timebase.rs  round253_strh_fcc_type.rs  round256_avih_micro_sec_per_frame.rs  round260_avih_max_bytes_per_sec.rs  round268_avih_total_frames.rs  round275_avih_movie_rect.rs  round285_idx1_rec_lists.rs  round292_avih_streams.rs  (+45 more)
