[package]
name = "oxideav-avi"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-avi"
authors = ["Mark Karpeles"]
description = "Pure-Rust AVI (RIFF) container for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-avi"
keywords = ["multimedia", "avi", "riff", "container", "pure-rust"]
categories = ["multimedia::video", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
oxideav-container = "0.1"
[dev-dependencies]
oxideav-mjpeg = "0.1"
