[package]
name = "oxideav-avi"
version = "0.0.9"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-avi"
authors = ["Mark Karpeles"]
description = "Pure-Rust AVI (RIFF) container for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-avi"
keywords = ["multimedia", "avi", "riff", "container", "pure-rust"]
categories = ["multimedia::video", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"

# No cross-crate dev-dependencies. Cross-package tests (real codec
# encode → AVI mux → demux → real decode round-trips) live in
# `crates/oxideav-tests`. The crate-local tests register synthetic
# codec_id ↔ tag mappings + use random/JPEG-shaped synthetic payloads
# to exercise the AVI muxer + demuxer in isolation.
[dev-dependencies]
